--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>index</title>
 </head>
 <body>
-    <script src="/assets/js/rangoEdad.js"></script>
+    <script src="/assets/js/diaSemana.js"></script>
 </body>
 </html>
